--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "expo-av": "~16.0.8",
     "expo-font": "~14.0.11",
     "expo-status-bar": "~3.0.9",
+    "firebase": "^12.9.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
+    "toastify-react-native": "^7.2.3"
   },
   "private": true
 }
